<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>2.5.6</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>

    <groupId>4INFO-oop</groupId>
    <artifactId>game-backend</artifactId>
    <packaging>jar</packaging>
    <version>1.3.0</version>

    <properties>
        <java.version>17</java.version>
    </properties>

    <build>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
            </plugin>

<!--            <plugin>-->
<!--                <artifactId>maven-compiler-plugin</artifactId>-->
<!--                <version>3.8.1</version>-->
<!--                <configuration>-->
<!--                    <release>${java.version}</release>-->
<!--                    <compilerArgs combine.children="append">-->
<!--                        <arg>-XDcompilePolicy=simple</arg>-->
<!--                        <arg>-Xplugin:ErrorProne-->
<!--                            -Xep:ReferenceEquality:OFF-->
<!--                            -Xep:CatchFail:ERROR-->
<!--                            -Xep:ModifyCollectionInEnhancedForLoop:ERROR-->
<!--                            -Xep:BoxedPrimitiveConstructor:ERROR-->
<!--                            -Xep:ClassNewInstance:ERROR-->
<!--                            -Xep:HidingField:ERROR-->
<!--                            -Xep:MissingOverride:ERROR-->
<!--                            -Xep:RedundantThrows:ERROR-->
<!--                            -Xep:WildcardImport:ERROR-->
<!--                            -Xep:StringSplitter:OFF-->
<!--                            -Xep:DefaultCharset:OFF-->
<!--                            -XepExcludedPaths:.*/(generated-sources|test)/.*</arg>-->
<!--                    </compilerArgs>-->
<!--                    <annotationProcessorPaths>-->
<!--                        <path>-->
<!--                            <groupId>com.google.errorprone</groupId>-->
<!--                            <artifactId>error_prone_core</artifactId>-->
<!--                            <version>2.9.0</version>-->
<!--                        </path>-->
<!--                    </annotationProcessorPaths>-->
<!--                </configuration>-->
<!--            </plugin>-->

            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>0.8.7</version>
                <executions>
                    <execution>
                        <id>pre-unit-test</id>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>post-unit-test</id>
                        <phase>test</phase>
                        <goals>
                            <goal>report</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

<!--            <plugin>-->
<!--                <groupId>org.apache.maven.plugins</groupId>-->
<!--                <artifactId>maven-checkstyle-plugin</artifactId>-->
<!--                <version>3.1.2</version>-->
<!--                <configuration>-->
<!--                    <sourceDirectories>-->
<!--                        <sourceDirectory>src/main/java</sourceDirectory>-->
<!--                    </sourceDirectories>-->
<!--                    <failsOnError>true</failsOnError>-->
<!--                    <configLocation>checkstyle.xml</configLocation>-->
<!--                    <consoleOutput>true</consoleOutput>-->
<!--                    <linkXRef>false</linkXRef>-->
<!--                </configuration>-->
<!--                <executions>-->
<!--                    <execution>-->
<!--                        <phase>compile</phase>-->
<!--                        <goals>-->
<!--                            <goal>checkstyle</goal>-->
<!--                        </goals>-->
<!--                    </execution>-->
<!--                </executions>-->
<!--                <dependencies>-->
<!--                    <dependency>-->
<!--                        <groupId>com.puppycrawl.tools</groupId>-->
<!--                        <artifactId>checkstyle</artifactId>-->
<!--                        <version>9.0.1</version>-->
<!--                    </dependency>-->
<!--                </dependencies>-->
<!--            </plugin>-->

<!--            <plugin>-->
<!--                <groupId>com.github.spotbugs</groupId>-->
<!--                <artifactId>spotbugs-maven-plugin</artifactId>-->
<!--                <version>4.4.1</version>-->
<!--                <configuration>-->
<!--                    <includeTests>false</includeTests>-->
<!--                    <effort>Max</effort>-->
<!--                    <threshold>Low</threshold>-->
<!--                    <excludeFilterFile>spotbugs-exclude.xml</excludeFilterFile>-->
<!--                </configuration>-->
<!--                <executions>-->
<!--                    <execution>-->
<!--                        <phase>compile</phase>-->
<!--                        <goals>-->
<!--                            <goal>check</goal>-->
<!--                        </goals>-->
<!--                    </execution>-->
<!--                    <execution>-->
<!--                        <id>findbugs-test-compile</id>-->
<!--                        <phase>test-compile</phase>-->
<!--                        <goals>-->
<!--                            <goal>check</goal>-->
<!--                        </goals>-->
<!--                    </execution>-->
<!--                </executions>-->
<!--                <dependencies>-->
<!--                    <dependency>-->
<!--                        <groupId>com.github.spotbugs</groupId>-->
<!--                        <artifactId>spotbugs</artifactId>-->
<!--                        <version>4.4.2</version>-->
<!--                        <scope>compile</scope>-->
<!--                    </dependency>-->
<!--                </dependencies>-->
<!--            </plugin>-->
        </plugins>
    </build>

    <dependencies>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-data-jpa</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-validation</artifactId>
        </dependency>
        <dependency>
            <groupId>com.h2database</groupId>
            <artifactId>h2</artifactId>
            <scope>runtime</scope>
        </dependency>
    </dependencies>
</project>

